fixed a layout issue on the login screen.

--- a/src/assets/style/page/_login.scss
+++ b/src/assets/style/page/_login.scss
@@ -10,7 +10,7 @@
   &-content {
     width: 100%;
     background: linear-gradient(to top, #394555, transparent 100%) !important;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     padding-bottom: 20px;
     p, h2 {
